# masim

./: .gitignore  README.md  agent.py  app.py  pyproject.toml  test.py
data/: checkpoints.db
masim/: config.py  main.py
masim/agents/: conditional.py  graph.py  nodes.py  utils.py
masim/api/: deps.py
masim/api/router/: __init__.py  animation.py  health.py  sessions.py
masim/models/: request.py  response.py  state.py
masim/services/: animation.py
prompts/: code_analyzer.md  coding_agent.md  coding_agent_fix.md  fix_planner.md  goal_extractor.md  plan_reviser.md  planning_agent.md
sandbox/: Dockerfile  pyproject.toml
